overflow fix

--- a/styles/components/_messagelist.scss
+++ b/styles/components/_messagelist.scss
@@ -10,6 +10,7 @@
   // border-radius: 26px;
   background-color: #f3f4f2;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .messages-list {
